styles/main.css
/* VARIABLES */

:root {
    --color-blue: #0083ff;
    --color-pink: #ff5470;
    --color-slate: #273142;
}

/* MAIN STYLES */

body {
    font-family: 'IBM Plex Sans', 'Segoe UI', 'Helvetiva Neue', 'Arial', sans-serif;
    padding: 0;
    margin: 0;
    line-height: 1.85em;
}

img {
    width: 100%;
    border: none;
    position: relative;
    display: block;
    z-index: 2000;
}

main a:not(.button):not(.fa):not(.arrow),
footer a:not(.button):not(.fa):not(.arrow),
main a:not(img) {
    padding-left: 2px;
    padding-right: 2px;
    color: black;
    background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(60%, transparent), color-stop(60%, rgba(0, 131, 255, 0.2)), to(rgba(0, 131, 255, 0.2)));
    background: linear-gradient(to bottom, transparent 0, transparent 60%, rgba(0, 131, 255, 0.2) 60%, rgba(0, 131, 255, 0.2) 100%);
    text-decoration: none;
    transition: color 0.5s ease-in-out;
}

main a:not(.button):not(.arrow):focus,
main a:not(.button):not(.arrow):hover,
footer a:not(.button):not(.arrow):focus,
footer a:not(.button):not(.arrow):hover,
main a:not(a img):focus,
main a:not(a img):hover {
    background: var(--color-blue);
    color: white;
    transition: all 0.25s;
}

code {
    font-family: 'IBM Plex Mono', Consolas, 'Courier New', monospace;
    padding: 2px 4px;
    font-size: 90%;
    color: #c7254e;
    background-color: #f9f2f4;
    border-radius: 4px;
}

h1,
h2, 
h3, 
h4 {
    line-height: 1.25em;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
}

h1 {
    font-weight: 600;
    font-size: 300%;
}

h2 {
    margin-top: 1em;
}

h4 {
    font-size: 95%;
    text-transform: uppercase;
    margin-top: 1em;
    margin-bottom: 1em;
}

@media screen and (max-width: 640px) {
    body {
        font-size: 95%;
    }
    
    h1 {
        padding-bottom: 0;
    }
    
    .quarter > h4:first-child,
    .half > h4:first-child {
        margin-top: 1.5em;
    }
}

.caption {
    font-size: 85%;
    line-height: 1.5em;
}

.description {
    font-size: 95%;
    line-height: 1.5em;
}

a.anchor {
    padding: 0 !important;
}

.blue {
    color: var(--color-blue);
}

.blue-block {
    color: white;
    font-weight: bold;
    background-color: var(--color-blue);
}

.pink-block {
    color: white;
    font-weight: bold;
    background-color: var(--color-pink);
}

.small-text {
    font-size: 70%;
    display: inline;
}

/* HEADER and FOOTER STYLES */

header {
    padding: 0 auto;
    display: flex;
    align-items: center;
    text-transform: uppercase;
    font-weight: 600;
    padding: 3em;
}

header a {
    color: black;
    text-decoration: none;
    transition: color 0.5s ease-in-out;
}

header a:hover {
    color: var(--color-blue);
    transition: all 0.25s;
}

#siteTitle {
    z-index: 2000;
    font-size: 150%;
    letter-spacing: .3em;
}

nav {
    z-index: 2000;
    margin-left: auto;
}

nav a {
    font-size: 85%;
    letter-spacing: 0.05em;
    margin: 1em;
}

footer {
    padding: 0 auto;
    display: flex;
    align-items: center;
    padding: 3em;
}

footer > * {
    display: block;
    z-index: 2000;
}

@media screen and (max-width: 640px) {
    header,
    footer {
        padding: 1.5em;
    }
    
    header {
        position: relative;
        display: block;
        z-index: 2000;
    }
    
    footer p {
        padding: 0;
        margin: 0;
    }
    
    nav {
        margin-top: 18px;
    }
    
    nav a:first-child{
        margin-left: 0;
    }
}

/* LISTS */

ul {
    list-style: outside none;
    margin: 0;
    padding: 0;
    font-size: 95%;
}

li {
    margin-bottom: 0.6em;
    line-height: 1.2em;
}

ul li >,
ol li > * {
    padding: 0;
    margin: 0;
}

.list-plus,
.list-arrows {
    padding-left: 40px;
    margin-top: 1.5em;
    margin-bottom: 1.5em;
}

.list-plus li,
.list-arrows li {
    text-indent: -1.875em;
}

.list-plus li:before,
.list-arrows li:before {
    padding-right: 1em;
}

.list-plus li:before {
    content: "+";
    padding-right: 1.35em;
}

.list-arrows li:before {
    content: "→";
}

.list-bold {
    font-weight: bold;
}

.list-bar {
    padding-left: 0;
    margin-top: 12px;
    margin-bottom: 12px;
    line-height: 2em;
}

.list-bar li {
    display: inline;
    padding: .25em .5em;
    color: white;
    text-indent: -1.3125em;
}

.list-bar.actions li {
    background-color: var(--color-slate);
}

.list-bar.tools li {
    background-color: var(--color-pink);
}

.list-bar.buttons li {
    transition: all 0.25s ease-in-out;  
}

.list-bar.buttons li:hover {
    opacity: 0.5;
    transition: all 0.25s;  
}

.list-bar.buttons li a {
    color: white;
    text-decoration: none;  
}

/* LAYOUT: CONTAINERS*/

main {
    padding-top: 8em;
}

.narrow {
    max-width: 540px;
    padding: 1.5em 3em;
    margin: 0 auto;
}

.wide {
    max-width: 768px;
    padding: 1.5em 3em;
    margin-left: auto;
    margin-right: auto;
}

.inset {
    max-width: 100%;
    margin-left: auto;
    margin-right: auto;
    padding: 1.5em 3em;
}

.bleed {
    max-width: 100%;
    margin-left: auto;
    margin-right: auto;
}

.cut {
    max-width: 75%;
}

@media screen and (max-width: 640px) {
    .wide,
    .narrow {
        padding: 0.75em 1.5em;
    } 
    
    .inset {
        padding: 0;
    }

    .wide > *:first-child,
    .narrow > *:first-child,
    .inset > *:first-child {
        margin-top: 0;
    }

    .wide > *:last-child,
    .narrow > *:last-child,
    .inset > *:last-child {
        margin-bottom: 0;
    }
}

@media screen and (max-width: 480px) {    
    .cut {
        max-width: 100%;
    }
}

/* LAYOUT: COLUMNS */

.cols {
    display: -webkit-flex;
    -webkit-flex-wrap: wrap;
    display: flex;
    flex-wrap: wrap;
}

.half {
    width: calc(50% - 1.5em);
    padding-right: 1.5em;
}

.third {
    width: calc(33.33% - 1.5em);
    padding-right: 1.5em;
}

.two-thirds {
    width: calc(66.66% - 1.5em);
    padding-right: 1.5em;
}

.quarter {
    width: calc(25% - 1.5em);
    padding-right: 1.5em;
}

@media screen and (max-width: 720px) {
    .half {
        width: 100%;
        padding-right: 0;
    }
    
    .third {
        width: 100%;
        padding-right: 0;
    }
    
    .two-thirds {
        width: 100%;
        padding-right: 0;
    }
    
    .quarter {
        width: 50%;
        padding-right: 0;
    }
}

.sep:before {
    content: "";
    display: block;
    position: relative;
    width: 100px;
    left: -1.5em;
    height: 1px;
    /* border-bottom: 2px solid var(--color-slate); */
    border-bottom: 2px solid rgba(39, 49, 66, 0.5);
}

@media screen and (max-width: 640px) {
    .sep {
        display: none;
    }
}

/* ELEMENTS: ICONS */

.fa {
    padding: 6px;
    margin-right: 3px;
    font-size: 75% !important;
    text-align: center;
    text-decoration: none;
    background: black;
    color: white;
    border-radius: 50%;
    transition: all 0.25s ease-in-out;
    opacity: 1;
}

.fa:hover {
    opacity: 0.5;
    transition: all 0.25s;
}

.icon-bar {
    margin-top: -3px;
    margin-right: 30px;
}

/* ELEMENTS: SOCIAL LINKS */

.social-links-prof span {
    display: block;
    margin: .25em 0;
}

.social-links-prof span .fa {
    margin-right: 1em;
}

/* PAGE STYLES: HOME */

.home-top {
    display: block;
    height: 4em;
}

.home-title {
    font-size: 300%;
    margin-bottom: 1em;
    font-weight: bold;
}

.home-subtitle {
    margin-top: 1em;
    margin-bottom: 1em;
    display: block;
    font-weight: 400;
    font-size: 175%;
    line-height: 150%;
    font-weight: bold;
    letter-spacing: -0.25px;
}

.home-blurb {
    display: block;
    font-weight: 400;
    font-size: 125%;
    line-height: 145%;
}

.home-bottom {
    display: block;
    height: calc(2vh + 1vw);
}

.home-pills {
    margin-top: 2.5em;
    text-transform: uppercase;
    font-size: 90%;
    font-weight: 700;
/*    color: gray;*/
}

/*
.home-pills {
    display: inline-block;
    margin-top: 1.5em;
    padding: 0.25em 0.75em;
    color: white;
    background-color: var(--color-blue);
    text-transform: uppercase;
    font-size: 90%;
    font-weight: 700;
    border-radius: 3px;
}
*/

.home-image {
    object-fit: cover;
    height: 560px;
    margin-bottom: 4em;
}

.home-bio {
    font-size: 95%;
    line-height: 1.5em;
}

@media screen and (max-width: 640px) {   
    .home-title {
        font-size: 250%;
    }
    
    .home-subtitle {
        font-size: 150%;
    }
}

/* PAGE STYLES: BIO */

#bio-prof-pic {
    border-radius: 50%;
    width: 320px;
    float: right;
    margin: -140px 0 24px 20px;
}

@media screen and (max-width: 768px) {
    #bio-prof-pic {
        float: none;
        margin: 0;
        margin-bottom: 20px;
        margin-top: -120px;
        width: 280px;
    }
}

/* PAGE STYLES: WORK */

.inline-label-now,
.inline-label-note,
.inline-label-github,
.inline-label-page {
    font-size: 90%;
    font-weight: 600;
    color: white;
    border-radius: 3px;
    padding: 1px 6px;
    margin-right: 1px;
    margin-left: 3px;
    text-decoration: none;
    transition: all 0.25s ease-in-out;
}

.inline-label-github:hover,
.inline-label-page:hover {
    opacity: 0.75;
    transition: all 0.25s ease-in-out;
}

.inline-label-now {
    margin-right: 4px;
    background-color: var(--color-blue);
}

.inline-label-note {
    color: black !important;
    background-color: #eeeeee;
}

.inline-label-github {
    background-color: #6f42c1;
}

.inline-label-page {
    background-color: var(--color-pink);
}

/* PAGE STYLES: BLOG LIST */

.posts-entry {
    margin-bottom: 1em;
    line-height: 1.5em;
}

.posts-entry-title {
    font-weight: 600;
    margin-right: 0.5em;    
}

.posts-entry-date {
    color: gray;
    text-transform: uppercase;
    font-size: 85%;
}

.posts-entry-blurb {
    display: block;
    font-size: 95%;
    margin-top: 0.5em;
}

/* PAGE STYLES: BLOG PAGE */

.byline {
    margin-top: -2em;
    margin-bottom: 3em;
}

.byline-author {
    text-transform: uppercase;
    font-weight: 600;
    padding-right: 0.5em;
}

.byline-date {
    color: #666;
}

/* PAGE STYLES: GRADIENT */

#gradient-top {
    top: 0;
    left: 0;
    width: 100%;
    height: 150px;
    z-index: 1000;
    position: fixed;
    display: block;
    background: -webkit-linear-gradient(rgba(255,255,255,1), rgba(255,255,255,0));
    background: -o-linear-gradient(rgba(255,255,255,1), rgba(255,255,255,0));
    background: -moz-linear-gradient(rgba(255,255,250,1), rgba(255,255,255,0));
    background: linear-gradient(rgba(255,255,255,1), rgba(255,255,255,0));
}

#gradient-bottom {
    width: 100%;
    height: 150px;
    bottom: 0;
    left: 0;
    z-index: 1000;
    position: fixed;
    display: block;
    background: -webkit-linear-gradient(rgba(255,255,255,0), rgba(255,254,250,1));
    background: -o-linear-gradient(rgba(255,255,255,0), rgba(255,254,250,1));
    background: -moz-linear-gradient(rgba(255,255,255,0), rgba(255,254,250,1));
    background: linear-gradient(rgba(255,255,255,0), rgba(255,254,250,1));
}

/* MISC */

.inset.photo-cover .photo-text {
    position: absolute;
    max-width: 480px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 2003;
    color: white;
    text-align: center;
}

